jenkins/bases/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins
  namespace: jenkins
  labels:
    name: jenkins
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      containers:
      - name: jenkins
        image: jenkins/jenkins
        resources:
            requests:
              cpu: "300m"
              memory: "512Mi"        
        ports:
        - containerPort: 8080
        volumeMounts:
          - name: jenkins-vol
            mountPath: /var/jenkins
      volumes:
        - name: jenkins-vol
          persistentVolumeClaim:
            claimName: nfs
